# ALGO_sketch_distance

./: .gitignore  BloomFilter.cpp  BloomFilter.h  CMakeLists.txt  FracMinHash.cpp  FracMinHash.h  README.md  dist.cpp  main.cpp  phylogenerator.h  run.sh  script_stream.sh
